Quality of life fixes

--- a/resume-site/index.html
+++ b/resume-site/index.html
@@ -35,7 +35,7 @@
 	<!-- Flexslider  -->
 	<link rel="stylesheet" href="css/flexslider.css">
 	<!-- Flaticons  -->
-	<link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
+	<link type="text/html" href="fonts/flaticon/font/flaticon.css">
 	<!-- Owl Carousel -->
 	<link rel="stylesheet" href="css/owl.carousel.min.css">
 	<link rel="stylesheet" href="css/owl.theme.default.min.css">
@@ -134,8 +134,8 @@
 
 				<div class="colorlib-footer">
 					<ul>
-						<li><a href="https://github.com/JackHenry-G"><i class="fa-brands fa-github"></i></a></li>
-						<li><a href="https://www.linkedin.com/in/jack-goggin"><i class="icon-linkedin2"></i></a></li>
+						<li><a href="https://github.com/JackHenry-G" target="_blank"><i class="fa-brands fa-github"></i></a></li>
+						<li><a href="https://www.linkedin.com/in/jack-goggin" target="_blank"><i class="icon-linkedin2"></i></a></li>
 					</ul>
 					<small><span>Website template retrieved from <a href="https://themewagon.com" target="_blank">Colorlib</a></span></small>
 				</div>
@@ -221,14 +221,14 @@
 									</div>
 								</div>
 							</div>
-							<div class="row">
+							<!--<div class="row">
 								<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
 									<div class="hire">
 										<h2>Download my full CV here</h2>
 										<p><a class="btn-hire">-- COMING SOON -- <i class="icon-download4"></i></a></p> 
 									</div>
 								</div>
-							</div>
+							</div>-->
 						</div>
 					</div>
 				</div>
