--- a/resume-site/index.html
+++ b/resume-site/index.html
@@ -137,7 +137,7 @@
 						<li><a href="https://github.com/JackHenry-G" target="_blank"><i class="fa-brands fa-github"></i></a></li>
 						<li><a href="https://www.linkedin.com/in/jack-goggin" target="_blank"><i class="icon-linkedin2"></i></a></li>
 					</ul>
-					<small><span>Website template retrieved from <a href="https://themewagon.com" target="_blank">Colorlib</a></span></small>
+					<small><span>Website template - <a href="https://themewagon.com" target="_blank">Colorlib</a></span></small>
 				</div>
 
 			</nav>
