Added blog to resume challenge website

--- a/resume-site/index.html
+++ b/resume-site/index.html
@@ -43,7 +43,7 @@
 	<link rel="stylesheet" href="css/style.css">
 	<script src="https://kit.fontawesome.com/eb7c358919.js" crossorigin="anonymous"></script>
 
-
+	<link rel="icon" type="images/png" href="images/face_xmas.jpeg">
 	<!-- Modernizr JS -->
 	<script src="js/modernizr-2.6.2.min.js"></script>
 	<!-- FOR IE9 below -->
@@ -137,7 +137,7 @@
 						<li><a href="https://github.com/JackHenry-G" target="_blank"><i class="fa-brands fa-github"></i></a></li>
 						<li><a href="https://www.linkedin.com/in/jack-goggin" target="_blank"><i class="icon-linkedin2"></i></a></li>
 					</ul>
-					<small><span>Website template - <a href="https://themewagon.com" target="_blank">Colorlib</a></span></small>
+					<small><span>Website template - <a href="https://colorlib.com/wp/template/jackson/" target="_blank">Colorlib</a></span></small>
 				</div>
 
 			</nav>
@@ -671,7 +671,7 @@
 					<div class="row">
 						<div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="blog-entry">
-								<a href="blog.html" class="blog-img"><img src="images/cloud_resume_challenge.jpeg" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
+								<a href="https://dev.to/jackhenryg/my-cloud-resume-challenge-4e6i" class="blog-img"><img src="images/cloud_resume_challenge.jpeg" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
 								<div class="desc">
 									<span><small>Coming soon</small> | <small> AWS cloud</small></span>
 									<h3><a href="blog.html">How I built and deployed this webpage using AWS</a></h3>
