Changes to text errors

--- a/resume-site/index.html
+++ b/resume-site/index.html
@@ -424,7 +424,7 @@
 										<p>
 											Working in a small agile development team of senior professionals to develop a forward-thinking application with new technologies such as microservices, graph databases and containerization.
 											<ul>
-												<li>Lead regular sprint meetings demonstrating current progress, gathering feedback to for the creation of tickets, prioritization of features and tracking of progress via JIRA</li>
+												<li>Lead regular sprint meetings demonstrating current progress, gathering feedback for the creation of tickets, prioritization of features and tracking of progress via JIRA</li>
 												<li>Created a REST API to communicate with back-end microservices with the use of Java, HTML, CSS, JavaScript with a series of libraries and frameworks such as Jersey, Jetty, FreeMarker etc.</li>
 												<li>Utilized Docker to package and deploy the application in light weight containers</li>
 												<li>Delivered an end-to-end graphic component with custom tree-view web control</li>
@@ -673,7 +673,7 @@
 							<div class="blog-entry">
 								<a href="https://dev.to/jackhenryg/my-cloud-resume-challenge-4e6i" class="blog-img"><img src="images/cloud_resume_challenge.jpeg" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
 								<div class="desc">
-									<span><small>Coming soon</small> | <small> AWS cloud</small></span>
+									<span><small>My Cloud Resume Challenge</small> | <small> AWS cloud</small></span>
 									<h3><a href="blog.html">How I built and deployed this webpage using AWS</a></h3>
 									<p>A short blog how I completed the AWS Cloud Resume Challenge and the lessons I learned when building this webpage and deploying it to AWS.</p>
 								</div>
