Uploading of a new blog series - Product Management

--- a/resume-site/index.html
+++ b/resume-site/index.html
@@ -673,9 +673,19 @@
 							<div class="blog-entry">
 								<a href="https://dev.to/jackhenryg/my-cloud-resume-challenge-4e6i" class="blog-img"><img src="images/cloud_resume_challenge.jpeg" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
 								<div class="desc">
-									<span><small>My Cloud Resume Challenge</small> | <small> AWS cloud</small></span>
-									<h3><a href="blog.html">How I built and deployed this webpage using AWS</a></h3>
-									<p>A short blog how I completed the AWS Cloud Resume Challenge and the lessons I learned when building this webpage and deploying it to AWS.</p>
+									<span><small>My Cloud Resume Challenge</small> | <small>AWS cloud</small></span>
+									<h3><a href="https://dev.to/jackhenryg/my-cloud-resume-challenge-4e6i">How I built and deployed this webpage using AWS</a></h3>
+									<p>A short blog on how I completed the AWS Cloud Resume Challenge and the lessons I learned when building this webpage and deploying it to AWS.</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInLeft">
+							<div class="blog-entry">
+								<a href="https://dev.to/jackhenryg/product-management-aws-portfolio-website-e5k" class="blog-img"><img src="images/blog-1.jpg" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
+								<div class="desc">
+									<span><small>Product Management part 1</small> | <small>AWS cloud</small></span>
+									<h3><a href="https://dev.to/jackhenryg/product-management-aws-portfolio-website-e5k">How I managed this product</a></h3>
+									<p>A short blog series demonstrating the vision of this product and the techniques I utilised to ensure succesful development.</p>
 								</div>
 							</div>
 						</div>
