--- a/resume-site/index.html
+++ b/resume-site/index.html
@@ -683,7 +683,7 @@
 							<div class="blog-entry">
 								<a href="https://dev.to/jackhenryg/product-management-aws-portfolio-website-e5k" class="blog-img"><img src="images/blog-1.jpg" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
 								<div class="desc">
-									<span><small>Product Management part 1</small> | <small>AWS cloud</small></span>
+									<span><small>Product Management part 1</small> | <small>Product/small></span>
 									<h3><a href="https://dev.to/jackhenryg/product-management-aws-portfolio-website-e5k">How I managed this product</a></h3>
 									<p>A short blog series demonstrating the vision of this product and the techniques I utilised to ensure succesful development.</p>
 								</div>
