Added in 3 part series blog and changed order of page

--- a/resume-site/index.html
+++ b/resume-site/index.html
@@ -120,13 +120,13 @@
 					<ul>
 						<!-- End Social Networks section --> 
 						<li class="active"><a href="#" data-nav-section="home">Home</a></li>
+						<li><a href="#" data-nav-section="blog">Blogs</a></li>
 						<li><a href="#" data-nav-section="about">About</a></li>
 						<li><a href="#" data-nav-section="services">Skills</a></li>
 						<!--<li><a href="#" data-nav-section="skills">Skills</a></li>-->
 						<li><a href="#" data-nav-section="experience">Experience</a></li>
 						<li><a href="#" data-nav-section="education">Education</a></li>
 						<!--<li><a href="#" data-nav-section="work">Work</a></li>-->
-						<li><a href="#" data-nav-section="blog">Blog</a></li>
 						<!--<li><a href="#" data-nav-section="contact">Contact</a></li>-->
 						
 					</ul>
@@ -176,6 +176,64 @@
 				   	</li>
 				  	</ul>
 			  	</div>
+			</section>
+
+			<section class="colorlib-blog" data-section="blog">
+				<div class="colorlib-narrow-content">
+					<div class="row">
+						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
+							<span class="heading-meta">Read</span>
+							<h2 class="colorlib-heading">Recent Blogs</h2>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInLeft">
+							<div class="blog-entry">
+								<a href="https://dev.to/jackhenryg/my-cloud-resume-challenge-4e6i" class="blog-img"><img src="images/cloud_resume_challenge.jpeg" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
+								<div class="desc">
+									<span><small>Cloud Resume Challenge</small> | <small>AWS cloud</small></span>
+									<h3><a href="https://dev.to/jackhenryg/my-cloud-resume-challenge-4e6i">How I built and deployed this webpage using AWS</a></h3>
+									<p>A short blog on how I completed the AWS Cloud Resume Challenge and the lessons I learned when building this webpage and deploying it to AWS.</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInLeft">
+							<div class="blog-entry">
+								<a href="https://dev.to/jackhenryg/product-management-aws-portfolio-website-e5k" class="blog-img"><img src="images/blog-1.jpg" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
+								<div class="desc">
+									<span><small>Product Management</small> | <small>Product</small></span>
+									<h3><a href="https://dev.to/jackhenryg/product-management-aws-portfolio-website-e5k">How I managed this product (3 part series)</a></h3>
+									<p>A short blog series demonstrating the vision of this product and the techniques I utilised to ensure succesful development.</p>
+								</div>
+							</div>
+						</div>
+						<!--<div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInRight">
+							<div class="blog-entry">
+								<a href="blog.html" class="blog-img"><img src="images/blog-2.jpg" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
+								<div class="desc">
+									<span><small>April 14, 2018 </small> | <small> Web Design </small> | <small> <i class="icon-bubble3"></i> 4</small></span>
+									<h3><a href="blog.html">Wordpress for a Beginner</a></h3>
+									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInLeft">
+							<div class="blog-entry">
+								<a href="blog.html" class="blog-img"><img src="images/blog-3.jpg" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
+								<div class="desc">
+									<span><small>April 14, 2018 </small> | <small> Inspiration </small> | <small> <i class="icon-bubble3"></i> 4</small></span>
+									<h3><a href="blog.html">Make website from scratch</a></h3>
+									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+								</div>
+							</div>
+						</div>-->
+					</div>
+					<!--<div class="row">
+						<div class="col-md-12 animate-box">
+							<p><a href="#" class="btn btn-primary btn-lg btn-load-more">Load more <i class="icon-reload"></i></a></p>
+						</div>
+					</div>-->
+				</div>
 			</section>
 
 			<section class="colorlib-about" data-section="about">
@@ -659,64 +717,6 @@
 					</div>
 				</div>
 			</section>-->
-
-			<section class="colorlib-blog" data-section="blog">
-				<div class="colorlib-narrow-content">
-					<div class="row">
-						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
-							<span class="heading-meta">Read</span>
-							<h2 class="colorlib-heading">Recent Blogs</h2>
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInLeft">
-							<div class="blog-entry">
-								<a href="https://dev.to/jackhenryg/my-cloud-resume-challenge-4e6i" class="blog-img"><img src="images/cloud_resume_challenge.jpeg" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
-								<div class="desc">
-									<span><small>My Cloud Resume Challenge</small> | <small>AWS cloud</small></span>
-									<h3><a href="https://dev.to/jackhenryg/my-cloud-resume-challenge-4e6i">How I built and deployed this webpage using AWS</a></h3>
-									<p>A short blog on how I completed the AWS Cloud Resume Challenge and the lessons I learned when building this webpage and deploying it to AWS.</p>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInLeft">
-							<div class="blog-entry">
-								<a href="https://dev.to/jackhenryg/product-management-aws-portfolio-website-e5k" class="blog-img"><img src="images/blog-1.jpg" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
-								<div class="desc">
-									<span><small>Product Management part 1</small> | <small>Product/small></span>
-									<h3><a href="https://dev.to/jackhenryg/product-management-aws-portfolio-website-e5k">How I managed this product</a></h3>
-									<p>A short blog series demonstrating the vision of this product and the techniques I utilised to ensure succesful development.</p>
-								</div>
-							</div>
-						</div>
-						<!--<div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInRight">
-							<div class="blog-entry">
-								<a href="blog.html" class="blog-img"><img src="images/blog-2.jpg" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
-								<div class="desc">
-									<span><small>April 14, 2018 </small> | <small> Web Design </small> | <small> <i class="icon-bubble3"></i> 4</small></span>
-									<h3><a href="blog.html">Wordpress for a Beginner</a></h3>
-									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInLeft">
-							<div class="blog-entry">
-								<a href="blog.html" class="blog-img"><img src="images/blog-3.jpg" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
-								<div class="desc">
-									<span><small>April 14, 2018 </small> | <small> Inspiration </small> | <small> <i class="icon-bubble3"></i> 4</small></span>
-									<h3><a href="blog.html">Make website from scratch</a></h3>
-									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-								</div>
-							</div>
-						</div>-->
-					</div>
-					<!--<div class="row">
-						<div class="col-md-12 animate-box">
-							<p><a href="#" class="btn btn-primary btn-lg btn-load-more">Load more <i class="icon-reload"></i></a></p>
-						</div>
-					</div>-->
-				</div>
-			</section>
 
 			<!--<section class="colorlib-contact" data-section="contact">
 				<div class="colorlib-narrow-content">
