--- a/resume-site/index.html
+++ b/resume-site/index.html
@@ -189,7 +189,7 @@
 					<div class="row">
 						<div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="blog-entry">
-								<a href="https://dev.to/jackhenryg/my-cloud-resume-challenge-4e6i" class="blog-img"><img src="images/cloud_resume_challenge.jpeg" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
+								<a href="https://dev.to/jackhenryg/my-cloud-resume-challenge-4e6i" target="_blank" class="blog-img"><img src="images/cloud_resume_challenge.jpeg" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
 								<div class="desc">
 									<span><small>Cloud Resume Challenge</small> | <small>AWS cloud</small></span>
 									<h3><a href="https://dev.to/jackhenryg/my-cloud-resume-challenge-4e6i">How I built and deployed this webpage using AWS</a></h3>
@@ -199,11 +199,21 @@
 						</div>
 						<div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="blog-entry">
-								<a href="https://dev.to/jackhenryg/product-management-aws-portfolio-website-e5k" class="blog-img"><img src="images/blog-1.jpg" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
+								<a href="https://dev.to/jackhenryg/product-management-aws-portfolio-website-e5k" target="_blank" class="blog-img"><img src="images/blog-1.jpg" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
 								<div class="desc">
 									<span><small>Product Management</small> | <small>Product</small></span>
 									<h3><a href="https://dev.to/jackhenryg/product-management-aws-portfolio-website-e5k">How I managed this product (3 part series)</a></h3>
 									<p>A short blog series demonstrating the vision of this product and the techniques I utilised to ensure succesful development.</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInLeft">
+							<div class="blog-entry">
+								<a href="/Product Owner - improving a digital journey.pdf" target="_blank" class="blog-img"><img src="images/presentation.jpg" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
+								<div class="desc">
+									<span><small>Product Owner</small> | <small>Product</small></span>
+									<h3><a href="/Product Owner - improving a digital journey.pdf">How I would Product Own</a></h3>
+									<p>A short presentation on how I would run things if I was a product owner tasked with improving a fictional digital journey.</p>
 								</div>
 							</div>
 						</div>
