Changed location of PDF to commit to S3 bucket

--- a/resume-site/index.html
+++ b/resume-site/index.html
@@ -209,10 +209,10 @@
 						</div>
 						<div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="blog-entry">
-								<a href="/Product Owner - improving a digital journey.pdf" target="_blank" class="blog-img"><img src="images/presentation.jpg" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
+								<a href="./Product Owner - improving a digital journey.pdf" target="_blank" class="blog-img"><img src="images/presentation.jpg" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
 								<div class="desc">
 									<span><small>Product Owner</small> | <small>Product</small></span>
-									<h3><a href="/Product Owner - improving a digital journey.pdf">How I would Product Own</a></h3>
+									<h3><a href="./Product Owner - improving a digital journey.pdf">How I would Product Own</a></h3>
 									<p>A short presentation on how I would run things if I was a product owner tasked with improving a fictional digital journey.</p>
 								</div>
 							</div>
