Updated copy to reflect recent work experience

--- a/resume-site/index.html
+++ b/resume-site/index.html
@@ -122,11 +122,8 @@
 						<li><a href="#" data-nav-section="about">About</a></li>
 						<li><a href="#" data-nav-section="blog">Blogs</a></li>
 						<li><a href="#" data-nav-section="services">Skills</a></li>
-						<!--<li><a href="#" data-nav-section="skills">Skills</a></li>-->
 						<li><a href="#" data-nav-section="experience">Experience</a></li>
 						<li><a href="#" data-nav-section="education">Education</a></li>
-						<!--<li><a href="#" data-nav-section="work">Work</a></li>-->
-						<!--<li><a href="#" data-nav-section="contact">Contact</a></li>-->
 						
 					</ul>
 				</div>
@@ -153,9 +150,11 @@
 										<span class="heading-meta">About Me</span>
 										<h2 class="colorlib-heading">Who Am I?</h2>
 										<p>
-											Goal-driven, analytical and creative software developer with 3+ years experience in the Telecommunications 
-											industry where I've gained a wide range of skills such as a degree in Digital & Technology Solutions, AWS cloud certifications, different programming
-											languages, tools and skills accross the development stack, dealing with customers, product management and much more.
+											A professional with 2 years' experience as a Full Stack Software Developer
+											(4+ in the Tech industry), backed by a 1st class BSc (Hons) in Digital &
+											Technology Solutions. With a track record of consistent delivery with a
+											Product mindset. Quick learner seeking a role to grow and contribute to
+											success.
 										</p>
 									</div>
 								</div>
@@ -164,25 +163,25 @@
 								<div class="col-md-3 animate-box" data-animate-effect="fadeInLeft">
 									<div class="services color-1">
 										<span class="icon2"><i class="icon-bulb"></i></span>
-										<h3>Full Stack Developer</h3>
-									</div>
-								</div>
-								<div class="col-md-3 animate-box" data-animate-effect="fadeInTop">
-									<div class="services color-3">
-										<span class="icon2"><i class="icon-data"></i></span>
-										<h3>Product Owner/Manager</h3>
-									</div>
-								</div>
-								<div class="col-md-3 animate-box" data-animate-effect="fadeInBottom">
-									<div class="services color-4">
-										<span class="icon2"><i class="icon-phone3"></i></span>
-										<h3>Experienced in Agile</h3>
+										<h3>Full Stack Dev</h3>
 									</div>
 								</div>
 								<div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
 									<div class="services color-2">
 										<span class="icon2"><i class="icon-globe-outline"></i></span>
-										<h3>AWS Cloud certified</h3>
+										<h3>Cloud certified</h3>
+									</div>
+								</div>
+								<div class="col-md-3 animate-box" data-animate-effect="fadeInBottom">
+									<div class="services color-4">
+										<span class="icon2"><i class="icon-phone3"></i></span>
+										<h3>Agile advocate</h3>
+									</div>
+								</div>
+								<div class="col-md-3 animate-box" data-animate-effect="fadeInTop">
+									<div class="services color-3">
+										<span class="icon2"><i class="icon-data"></i></span>
+										<h3>Product Manager</h3>
 									</div>
 								</div>
 							</div>
@@ -195,14 +194,14 @@
 				<div class="colorlib-narrow-content">
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
-							<span class="heading-meta">Read</span>
-							<h2 class="colorlib-heading">Recent Blogs</h2>
+							<span class="heading-meta">Personal</span>
+							<h2 class="colorlib-heading">Projects and blogs</h2>
 						</div>
 					</div>
 					<div class="row">
 						<div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="blog-entry">
-								<a href="https://dev.to/jackhenryg/my-cloud-resume-challenge-4e6i" target="_blank" class="blog-img"><img src="images/cloud_resume_challenge.jpeg" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
+								<a href="https://dev.to/jackhenryg/my-cloud-resume-challenge-4e6i" target="_blank" class="blog-img"><img src="images/cloud_resume_challenge.jpeg" class="img-responsive"></a>
 								<div class="desc">
 									<span><small>Cloud Resume Challenge</small> | <small>AWS cloud</small></span>
 									<h3><a href="https://dev.to/jackhenryg/my-cloud-resume-challenge-4e6i">How I built and deployed this webpage using AWS</a></h3>
@@ -212,21 +211,21 @@
 						</div>
 						<div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="blog-entry">
-								<a href="https://dev.to/jackhenryg/product-management-aws-portfolio-website-e5k" target="_blank" class="blog-img"><img src="images/blog-1.jpg" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
+								<a href="#" target="_blank" class="blog-img"><img src="images/spring-boot.jpg" class="img-responsive"></a>
 								<div class="desc">
-									<span><small>Product Management</small> | <small>Product</small></span>
-									<h3><a href="https://dev.to/jackhenryg/product-management-aws-portfolio-website-e5k">How I managed this product (3 part series)</a></h3>
-									<p>A short blog series demonstrating the vision of this product and the techniques I utilised to ensure succesful development.</p>
+									<span><small>Spring Boot</small> | <small>Full Stack</small></span>
+									<h3><a href="./Product Owner - improving a digital journey.pdf">Favourite movies tracker <b>TBD</b></a></h3>
+									<p>An application built to allow me to rank my favourite movies of all time and to notify me when they are showing in my nearby cinemas! I built this application to help me learn Spring Boot and re-cement my fundamentals of Java development.</p>
 								</div>
 							</div>
 						</div>
 						<div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="blog-entry">
-								<a href="./Product Owner - improving a digital journey.pdf" target="_blank" class="blog-img"><img src="images/presentation.jpg" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
+								<a href="./Product Owner - improving a digital journey.pdf" target="_blank" class="blog-img"><img src="images/presentation.jpg" class="img-responsive"></a>
 								<div class="desc">
-									<span><small>Product Owner</small> | <small>Product</small></span>
-									<h3><a href="./Product Owner - improving a digital journey.pdf">How I would Product Own</a></h3>
-									<p>A short presentation on how I would run things if I was a product owner tasked with improving a fictional digital journey.</p>
+									<span><small>Product</small></span>
+									<h3><a href="./Product Owner - improving a digital journey.pdf">Product Management</a></h3>
+									<p>A short presentation on the building blocks of product management based on my 6 months' experience where I learned the importance of aliging product vision with business objectives, data driven decision making and Scrum project management.</p>
 								</div>
 							</div>
 						</div>
@@ -238,21 +237,23 @@
 				<div class="colorlib-narrow-content">
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
-							<span class="heading-meta">What I do?</span>
-							<h2 class="colorlib-heading">Here are some of my expertise</h2>
+							<span class="heading-meta">Skills</span>
+							<h2 class="colorlib-heading">My tech stack</h2>
 						</div>
 					</div>
 					<div class="row row-pt-md">
 						<div class="col-md-4 text-center animate-box">
-							<div class="services color-1">
+							<div class="services color-3">
 								<span class="icon">
-									<i class="icon-bulb"></i>
+									<i class="icon-phone3"></i>
 								</span>
 								<div class="desc">
-									<h3>Microservices</h3>
-									<p>
-										Worked in a small team focussed on developing independent services.
-									</p>
+									<h3>Full Stack Development</h3>
+									<p>Java - Spring Boot, Lombok, Eclipse Jersey</p>
+									<p>Python - Django, Numpy, Pandas</p>
+									<p>Web - HTML, CSS, JS, FreeMarker, Thymeleaf</p>
+									<p>Testing - JUnit, Mockito</p>
+									<p>Logging - Log4j, Sl4j</p>
 								</div>
 							</div>
 						</div>
@@ -262,21 +263,8 @@
 									<i class="icon-data"></i>
 								</span>
 								<div class="desc">
-									<h3>Graph databases</h3>
-									<p>
-										Implemented graph databases to manage a network of relationships.
-									</p>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-4 text-center animate-box">
-							<div class="services color-3">
-								<span class="icon">
-									<i class="icon-phone3"></i>
-								</span>
-								<div class="desc">
-									<h3>API Development</h3>
-									<p>Designed, developed and tested a REST API to interface with services.</p>
+									<h3>Databases</h3>
+									<p>ArangoDB (Graph), DynamoDB and PostgreSQL</p>
 								</div>
 							</div>
 						</div>
@@ -286,8 +274,12 @@
 									<i class="icon-layers2"></i>
 								</span>
 								<div class="desc">
-									<h3>Programming languages</h3>
-									<p>Java, Python, HTML, CSS, JS, Node.js, Bash scripting etc.</p>
+									<h3>DevOps</h3>
+									<p>OS - Linux</p>
+									<p>Containerization - Docker</p>
+									<p>Version Control - GitLab, GitHub</p>
+									<p>CI/CD - GitHub Actions</p>
+									<p>IaC - AWS SAM</p>
 								</div>
 							</div>
 						</div>
@@ -297,8 +289,8 @@
 									<i class="icon-data"></i>
 								</span>
 								<div class="desc">
-									<h3>Docker</h3>
-									<p>Deployed microservices to connected lighweight containers.</p>
+									<h3>Cloud</h3>
+									<p>EC2, S3, DynamoDB, Lambda, API Gateway, AWS SAM, IAM, CloudFront...</p>
 								</div>
 							</div>
 						</div>
@@ -308,8 +300,8 @@
 									<i class="icon-phone3"></i>
 								</span>
 								<div class="desc">
-									<h3>CI/CD + IaC</h3>
-									<p>Experience with automated testing (Git pipelines) and IaC (AWS SAM)</p>
+									<h3>Other</h3>
+									<p>JIRA, Confluence, MIRO</p>
 								</div>
 							</div>
 						</div>
@@ -336,19 +328,18 @@
 									</div>
 
 									<div class="timeline-label">
-										<h2><a href="#">SOFTWARE DEVELOPER</a> <span>2021 - Current</span></h2>
+										<h2><a href="#">SOFTWARE DEVELOPER</a> <span>2021 - 2023</span></h2>
 										<p>
-											Working in a small agile development team of senior professionals to develop a forward-thinking application with new technologies such as microservices, graph databases and containerization.
+											Developed a Java web application for Cloud Data Centre Inventory management and onboarding of customers:
 											<ul>
-												<li>Lead regular sprint meetings demonstrating current progress, gathering feedback for the creation of tickets, prioritization of features and tracking of progress via JIRA</li>
-												<li>Created a REST API to communicate with back-end microservices with the use of Java, HTML, CSS, JavaScript with a series of libraries and frameworks such as Jersey, Jetty, FreeMarker etc.</li>
-												<li>Utilized Docker to package and deploy the application in light weight containers</li>
-												<li>Delivered an end-to-end graphic component with custom tree-view web control</li>
-												<li>Regular implementation of graph database toolsets within microservices to handle data layer</li>
-												<li>Comfortable with Unix systems and developing bash scripts for testing of microservices </li>
-												<li>Produced technical and HLD documents of components for knowledge and business cases</li>
+												<li>Collaborated with senior developers to create Java REST APIs, implementing a microservices architecture</li>
+												<li>Designed an intuitive and dynamic interface using HTML, CSS, JavaScript, and FreeMarker</li>
+												<li>Engineered an end-to-end feature, leveraging ArangoDB's graphing system, to optimize network device paths for customer communication</li>
+												<li>Utilized Docker to containerize and orchestrate services, streamlining deployment processes and ensuring consistent environments across development</li>
+												<li>Regular code reviews via Gitlab and peer programming</li>
+												<li>Actively participated in sprint planning, scrums, reviews, and retrospectives to contribute to continuous improvement of development processes. Using JIRA and Confluence as tools for success.</li>
 											</ul>
-										</p>
+										</p>										  
 									</div>
 								</div>
 							</article>
